--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       body {
         font-family: 'Soehne';
         font-size: 13px;
+        background: rgb(98, 98, 98);
       }
 
       @font-face {
@@ -20,7 +21,7 @@
         font-size: 20px;
       }
       .large-logo {
-        width: 40px;
+        width: 50px;
       }
 
       table {
@@ -31,7 +32,7 @@
 
       th,
       td {
-        border: 1px solid #ddd;
+        border: 1px solid #ffffff;
         padding: 8px;
         text-align: left;
       }
@@ -42,7 +43,11 @@
       }
 
       tr:nth-child(even) {
-        background-color: #f2f2f2;
+        background-color: #d4d4d4;
+      }
+
+      tr {
+        background-color: #ffffff;
       }
 
       .filter-input {
@@ -239,10 +244,10 @@
         filteredData.forEach((row) => {
           const tr = document.createElement('tr');
           tr.innerHTML = `
-      <td>${row.industry}</td>
-      <td>${row.app}</td>
-      <td>${row.note}</td>
-    `;
+          <td>${row.industry}</td>
+          <td>${row.app}</td>
+          <td>${row.note}</td>
+        `;
           tableBody.appendChild(tr);
         });
       }
