--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
         populateDropdown('app-filter', appSet);
         populateDropdown('note-filter', noteSet);
       }
+
       function populateDropdown(dropdownId, items) {
         const dropdown = document.getElementById(dropdownId);
         dropdown.length = 1;
@@ -192,10 +193,23 @@
           return (
             (industryFilter === '' ||
               row.industry.toUpperCase() === industryFilter ||
-              row.industry === 'Across All') &&
+              row.industry === 'All Industries') &&
             (appFilter === '' || row.app.toUpperCase() === appFilter) &&
             (noteFilter === '' || row.note.toUpperCase() === noteFilter)
           );
+        });
+
+        const sortedData = filteredData.sort((a, b) => {
+          if (a.industry.toUpperCase() === industryFilter) {
+            return -1;
+          } else if (b.industry.toUpperCase() === industryFilter) {
+            return 1;
+          } else if (a.industry === 'Across All') {
+            return -1;
+          } else if (b.industry === 'Across All') {
+            return 1;
+          }
+          return 0;
         });
 
         updateDropdowns(filteredData);
